config.yaml: updated label in links

--- a/config.yaml
+++ b/config.yaml
@@ -29,7 +29,7 @@ params:
   footer:
     content: '&copy; Kevin Chu. All rights reserved.'
     links:
-      - label: Made with Stackbit.
+      - label: ''
         url: 'https://www.stackbit.com'
         style: link
         new_window: true
